welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:10: error: illegal start of statement
    		{else}
                 ^SlugTracking:12: error: Unmatched closing brace '}' ignored here
    		}
                ^SlugTracking:17: error: Unmatched closing brace '}' ignored here
} 
^SlugTracking:20: error: eof expected but '}' found.
}
^